--- a/netX-EtherCAT.ioc
+++ b/netX-EtherCAT.ioc
@@ -5,11 +5,11 @@ CAD.provider=
 CORTEX_M7.CPU_DCache=Enabled
 CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE,configCHECK_FOR_STACK_OVERFLOW,configENABLE_FPU,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
-FREERTOS.configTOTAL_HEAP_SIZE=150*1024
-FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
+FREERTOS.configENABLE_FPU=1
+FREERTOS.configTOTAL_HEAP_SIZE=153600
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
