Initial solution with low SPI clock speed

--- a/netX-EtherCAT.ioc
+++ b/netX-EtherCAT.ioc
@@ -78,10 +78,19 @@ PA14\ (JTCK/SWCLK).GPIO_Label=TCK
 PA14\ (JTCK/SWCLK).Locked=true
 PA14\ (JTCK/SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PA5.GPIO_PuPd=GPIO_PULLDOWN
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PA6.GPIO_PuPd=GPIO_PULLDOWN
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PA7.GPIO_PuPd=GPIO_PULLDOWN
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
@@ -108,10 +117,12 @@ PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Locked=true
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
-PD14.GPIOParameters=GPIO_PuPd,GPIO_Label
+PD14.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PD14.GPIO_Label=SPI1_CS_VMK
+PD14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PD14.GPIO_PuPd=GPIO_PULLUP
 PD14.Locked=true
+PD14.PinState=GPIO_PIN_SET
 PD14.Signal=GPIO_Output
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
@@ -311,10 +322,16 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI1.CalculateBaudRate=100.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
+SPI1.CalculateBaudRate=1.5625 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase,CLKPolarity,CRCCalculation,DataSize,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
