--- a/netX-EtherCAT.ioc
+++ b/netX-EtherCAT.ioc
@@ -28,11 +28,11 @@ Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin10=PG6
-Mcu.Pin11=PG7
-Mcu.Pin12=PA13 (JTMS/SWDIO)
-Mcu.Pin13=PA14 (JTCK/SWCLK)
-Mcu.Pin14=PB3 (JTDO/TRACESWO)
+Mcu.Pin10=PG7
+Mcu.Pin11=PA13 (JTMS/SWDIO)
+Mcu.Pin12=PA14 (JTCK/SWCLK)
+Mcu.Pin13=PB3 (JTDO/TRACESWO)
+Mcu.Pin14=PB5
 Mcu.Pin15=PB7
 Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin17=VP_SYS_VS_tim6
@@ -41,9 +41,9 @@ Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
-Mcu.Pin7=PA7
-Mcu.Pin8=PB14
-Mcu.Pin9=PD14
+Mcu.Pin7=PB14
+Mcu.Pin8=PD14
+Mcu.Pin9=PG6
 Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -88,12 +88,6 @@ PA6.GPIO_PuPd=GPIO_PULLDOWN
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
-PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PA7.GPIO_PuPd=GPIO_PULLDOWN
-PA7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PA7.Locked=true
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
@@ -103,6 +97,12 @@ PB3\ (JTDO/TRACESWO).GPIO_Label=SWO
 PB3\ (JTDO/TRACESWO).Locked=true
 PB3\ (JTDO/TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO/TRACESWO).Signal=DEBUG_JTDO-SWO
+PB5.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB5.GPIO_PuPd=GPIO_PULLDOWN
+PB5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB5.Locked=true
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI1_MOSI
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
