--- a/netX-EtherCAT.ioc
+++ b/netX-EtherCAT.ioc
@@ -28,23 +28,24 @@ Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin10=PG7
-Mcu.Pin11=PA13 (JTMS/SWDIO)
-Mcu.Pin12=PA14 (JTCK/SWCLK)
-Mcu.Pin13=PB3 (JTDO/TRACESWO)
-Mcu.Pin14=PB5
-Mcu.Pin15=PB7
-Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin17=VP_SYS_VS_tim6
+Mcu.Pin10=PG6
+Mcu.Pin11=PG7
+Mcu.Pin12=PA13 (JTMS/SWDIO)
+Mcu.Pin13=PA14 (JTCK/SWCLK)
+Mcu.Pin14=PB3 (JTDO/TRACESWO)
+Mcu.Pin15=PB5
+Mcu.Pin16=PB7
+Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin18=VP_SYS_VS_tim6
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA5
 Mcu.Pin6=PA6
-Mcu.Pin7=PB14
-Mcu.Pin8=PD14
-Mcu.Pin9=PG6
-Mcu.PinsNb=18
+Mcu.Pin7=PB0
+Mcu.Pin8=PB14
+Mcu.Pin9=PD14
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -88,6 +89,10 @@ PA6.GPIO_PuPd=GPIO_PULLDOWN
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LD1
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
