--- a/netX-EtherCAT.ioc
+++ b/netX-EtherCAT.ioc
@@ -23,7 +23,8 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
 Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP7=TIM3
+Mcu.IPNb=8
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -37,6 +38,7 @@ Mcu.Pin15=PB5
 Mcu.Pin16=PB7
 Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V1
 Mcu.Pin18=VP_SYS_VS_tim6
+Mcu.Pin19=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
@@ -45,7 +47,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PB0
 Mcu.Pin8=PB14
 Mcu.Pin9=PD14
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -65,6 +67,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:true\:true\:false
+NVIC.TIM3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
@@ -171,7 +174,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -327,21 +330,27 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_HIGH
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CalculateBaudRate=1.5625 MBits/s
+SPI1.CalculateBaudRate=12.5 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPhase,CLKPolarity,CRCCalculation,DataSize,NSSPMode
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
+TIM3.IPParameters=Period,Prescaler
+TIM3.IPParametersWithoutCheck=Prescaler
+TIM3.Period=100-1
+TIM3.Prescaler=uwPrescalerValue
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-H743ZI
 boardIOC=true
 isbadioc=false
